<resources>
    <string name="app_name">Posadka</string>
    <string name="size">Размер</string>
    <string name="hole">Система отверстия</string>
    <string name="shaft">Система вала</string>
    <string name="gap">Посадка</string>
    <string name="classAccuracy">Класс точности</string>
    <string name="deviations">Отклонения</string>
    <string name="estext">ES: %1S</string>
    <string name="istext">IS: %1S</string>
    <string name="low_deviation">Нижнее отклонение</string>
    <string name="high_deviation">Верхнее отклонение</string>
    <string name="error">Отклонения не найдены</string>
    <string name="error_gap">Посадка не найдены</string>
</resources>