<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightdp"
        android:text="@string/size"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <EditText
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/eightdp"
        android:hint="@string/size"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAppearance="?attr/textAppearanceBody1" />

    <TextView
        android:id="@+id/classAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightdp"
        android:text="@string/classAccuracy"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/deviation_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:thumbTint="@color/black"
        app:trackTint="@android:color/darker_gray"
        android:layout_margin="@dimen/eightdp"
        android:checked="true"
        android:text="@string/hole"
        android:textAppearance="?attr/textAppearanceBody2" />

    <EditText
        android:id="@+id/hole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightdp"
        android:hint="@string/hole"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAppearance="?attr/textAppearanceBody2" />

    <TextView
        android:id="@+id/deviations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eightdp"
        android:text="@string/deviations"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toBottomOf="@+id/hole" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/eightdp"
        android:elevation="@dimen/eightdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/val_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/eightdp"
                android:gravity="start|center_vertical"
                android:minHeight="30dp"
                android:paddingHorizontal="@dimen/eightdp"
                android:text="@string/high_deviation"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/hole_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/eightdp"
                android:gravity="start|center_vertical"
                android:minHeight="30dp"
                android:paddingHorizontal="@dimen/eightdp"
                android:text="@string/low_deviation"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>